--- a/eZ/Bundle/EzPublishCoreBundle/Resources/views/default/content/embed_inline.html.twig
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/views/default/content/embed_inline.html.twig
@@ -7,4 +7,8 @@
 {% set parameters = {
     "isEmbed": true
 } %}
-<a href="{{ ez_path(content, parameters) }}"{% if class is defined %} class="{{ class }}"{% endif %}{{ data_attributes_str|raw }}>{{ content.name }}</a>
+{% if location is defined %}
+    <a href="{{ ez_path(location, parameters) }}"{% if class is defined %} class="{{ class }}"{% endif %}{{ data_attributes_str|raw }}>{{ content.name }}</a>
+{% else %}
+    <a href="{{ ez_path(content, parameters) }}"{% if class is defined %} class="{{ class }}"{% endif %}{{ data_attributes_str|raw }}>{{ content.name }}</a>
+{% endif %}
