--- a/eZ/Bundle/EzPublishCoreBundle/Resources/views/default/content/embed.html.twig
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/views/default/content/embed.html.twig
@@ -1,7 +1,7 @@
 {% set content_name=ez_content_name(content) %}
 
 {% if objectParameters.doNotGenerateEmbedUrl is defined and objectParameters.doNotGenerateEmbedUrl %}
-    {{ content.name }}
+    <h3>{{ content.name }}</h3>
 {% else %}
     {% if location is defined %}
         <h3><a href="{{ ez_path(location) }}">{{ content_name }}</a></h3>
