--- a/eZ/Bundle/EzPublishCoreBundle/Resources/views/default/content/full.html.twig
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/views/default/content/full.html.twig
@@ -3,6 +3,6 @@
     <h2>{{ ez_content_name(content) }}</h2>
     {% for field in content.fieldsByLanguage(language|default(null)) %}
         <h3>{{ field.fieldDefIdentifier }}</h3>
-        {{ ez_render_field(content, field.fieldDefIdentifier) }}
+        {{ ez_render_field(content, field.fieldDefIdentifier, {location: location|default(null)}) }}
     {% endfor %}
 {% endblock %}
