--- a/eZ/Bundle/EzPublishCoreBundle/Resources/views/content_fields.html.twig
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/views/content_fields.html.twig
@@ -1,9 +1,9 @@
 {# Template blocks to be used by content fields #}
 {# Block naming convention is <fieldDefinitionIdentifier>_field #}
 {# Following variables are passed:
- # - \eZ\Publish\API\Repository\Values\Content\Field field the field to display
- # - \eZ\Publish\API\Repository\Values\Content\ContentInfo contentInfo the contentInfo to which the field belongs to
- # - \eZ\Publish\API\Repository\Values\Content\VersionInfo versionInfo the versionInfo to which the field belongs to
+ # - \Ibexa\Contracts\Core\Repository\Values\Content\Field field the field to display
+ # - \Ibexa\Contracts\Core\Repository\Values\Content\ContentInfo contentInfo the contentInfo to which the field belongs to
+ # - \Ibexa\Contracts\Core\Repository\Values\Content\VersionInfo versionInfo the versionInfo to which the field belongs to
  # - mixed fieldSettings settings of the field (depends on the fieldtype)
  # - array parameters options passed to ez_render_field under the parameters key
  # - array attr the attributes to add the generate HTML, contains at least a "class" entry
