--- a/src/bundle/Core/Resources/views/default/content/embed_image.html.twig
+++ b/src/bundle/Core/Resources/views/default/content/embed_image.html.twig
@@ -1,7 +1,7 @@
-{% set image_field_identifier = ez_content_field_identifier_first_filled_image(content) %}
+{% set image_field_identifier = ibexa_content_field_identifier_first_filled_image(content) %}
 
 {% if image_field_identifier is not null %}
-    {{ ez_render_field(
+    {{ ibexa_render_field(
         content,
         image_field_identifier,
         {
