--- a/src/bundle/Core/Resources/views/default/content/full.html.twig
+++ b/src/bundle/Core/Resources/views/default/content/full.html.twig
@@ -1,8 +1,8 @@
 {% extends no_layout == true ? view_base_layout : page_layout %}
 {% block content %}
-    <h2>{{ ez_content_name(content) }}</h2>
+    <h2>{{ ibexa_content_name(content) }}</h2>
     {% for field in content.fieldsByLanguage(language|default(null)) %}
         <h3>{{ field.fieldDefIdentifier }}</h3>
-        {{ ez_render_field(content, field.fieldDefIdentifier, {location: location|default(null)}) }}
+        {{ ibexa_render_field(content, field.fieldDefIdentifier, {location: location|default(null)}) }}
     {% endfor %}
 {% endblock %}
