--- a/src/bundle/Core/Resources/views/default/content/text_linked.html.twig
+++ b/src/bundle/Core/Resources/views/default/content/text_linked.html.twig
@@ -1,7 +1,7 @@
-{% set content_name=ez_content_name(content) %}
+{% set content_name=ibexa_content_name(content) %}
 
 {% if location is defined %}
-    <a href="{{ ez_path(location) }}">{{ content_name }}</a>
+    <a href="{{ ibexa_path(location) }}">{{ content_name }}</a>
 {% else %}
     <p>{{ content_name }}</p>
 {% endif %}
