--- a/src/bundle/Core/Resources/views/pagelayout.html.twig
+++ b/src/bundle/Core/Resources/views/pagelayout.html.twig
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     {% if content is defined and title is not defined %}
-        {% set title = ez_content_name( content ) %}
+        {% set title = ibexa_content_name( content ) %}
     {% endif %}
     <title>{{ title|default( 'Home' ) }}</title>
     <meta name="generator" content="Ibexa DXP"/>
     {% if content is defined and content.contentInfo.mainLocationId %}
-        <link rel="canonical" href="{{ ez_path(content) }}" />
+        <link rel="canonical" href="{{ ibexa_path(content) }}" />
     {% endif %}
 </head>
 <body>
